# logfire-helm-chart

./: .pre-commit-config.yaml  CNAME  README.md  README.md.gotmpl  RELEASE.md  index.yaml
.github/: pull_request_template.md
.github/workflows/: pr.yaml  release.yml
chart/: Chart.yaml  README.md  README.md.gotmpl  values.docker-desktop.yaml  values.k3s.yaml  values.yaml
chart/templates/: NOTES.txt  _helpers.tpl  dex-config.yaml  logfire-api-ingress.yaml  logfire-backend-migrations.yaml  logfire-backend.yaml  logfire-ff-cache.yaml  logfire-ff-config.yaml  logfire-ff-conhash-cache.yaml  logfire-ff-ingest-api.yaml  logfire-ff-ingest-worker.yaml  logfire-ff-maintenance-worker.yaml  logfire-ff-migrations.yaml  logfire-ff-query-api.yaml  logfire-ff-query-worker.yaml  logfire-frontend.yaml  logfire-otel-collector.yaml  logfire-scheduler.yaml  logfire-service-config.yaml  logfire-service.yaml  logfire-storage-config.yaml  logfire-worker.yaml  maildev.yaml  minio.yaml  postgres.yaml  redis.yaml  secrets.yaml
charts/logfire/: Chart.yaml  README.md  README.md.gotmpl  values.dev.yaml  values.docker-desktop.yaml  values.k3s.yaml  values.yaml
charts/logfire/ci/: ci-values.yaml
charts/logfire/templates/: NOTES.txt  _helpers-fusionfire.tpl  _helpers-resources.tpl  _helpers-validation.tpl  _helpers.tpl  dev-postgres.yaml  extra-objects.yaml  logfire-ai-gateway.yaml  (+51 more)
ci/: ct.yaml  kind.yaml
tests/integration/: .gitignore  conftest.py  pyproject.toml  test_auth.py  test_backend.py  test_ingest.py  test_query.py
tests/integration/helpers/: otlp.py  poll.py  tokens.py
(+9 files in other folders)
