[project]
name = "logfire-helm-chart-integration-tests"
version = "0"
description = "End-to-end tests for the Logfire Helm chart, run against a real cluster."
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.6",
    "httpx>=0.27",
    "pytest>=8.3",
]

[tool.pytest.ini_options]
addopts = "-ra"
